tomcat 外置构建处理