@@ -1,21 +1,21 @@
 #!/bin/bash
-export JAVA_HOME=/usr/java/jdk1.8.0_131
-export PATH=$JAVA_HOME/bin:$PATH
-export CLASSPATH=.:$JAVA_HOME/lib/dt.jar:$JAVA_HOME/lib/tools.jar
 
-log_path=/root/logs/vote
-mvn -Dmaven.test.skip=true clean -e package
+mvn -Dmaven.test.skip=true clean -P product -e package
 if [ ! -d "/opt/vote/server" ];then
         sudo mkdir -p /opt/vote/server
 fi;
 
-echo '==================move============'
-mv target/vote-1.0.war /opt/vote/server
-cd /opt/vote/server
+echo '==================bak============'
+cp target/vote-1.0.war /opt/vote/server/vote-1.0-$(date +%y%m%d_ %H:%M:%S).war
 
 echo ==================kill vote================
-ps -ef|grep vote-1.0.war|grep -v grep |awk '{print $2}'|xargs kill -9
+ps -ef|grep Dcatalina.home=/opt/tomcat-vote|grep -v grep |awk '{print $2}'|xargs kill -9
+sleep 3
 
-echo ==================start Bootstrap================
-nohup java -Xms128m -Xmx128m -XX:MaxPermSize=128M -XX:SurvivorRatio=3 -XX:NewRatio=1 -server -jar vote-1.0.war --spring.profiles.active=product &
-tail -f $log_path/vote.log
+
+rm -rf /opt/web-vote/*
+unzip target/vote-1.0.war -d /opt/web-vote/
+
+cd /opt/tomcat-vote/bin
+./startup.sh
+tail -f ../log/catalina.$(date +%Y-%m-%d).out
